src/objects/MYBZ_PGP__c.object
<CustomObject>
    <fields>
        <fullName>Global_IDs__c</fullName>
        <label>Global IDs</label>
        <picklist>
            <picklistValues>
                <fullName>133282</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>129520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18785</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033776</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>123621</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2036330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2096075</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2099861</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120518</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131795</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116447</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>132780</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19536</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19515</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2090842</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130531</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2061419</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003821</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40466</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023818</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>119895</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020294</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19907</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PGP_ID__c</fullName>
        <externalId>true</externalId>
        <label>PGP ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>MYBZ_System__c</referenceTo>
        <relationshipLabel>PGPs</relationshipLabel>
        <relationshipName>PGPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PGP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PGP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>